--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,8 @@
   color: #529197; }
 
 .sk-cube-grid {
-  width: 80px;
-  height: 80px;
+  width: 180px;
+  height: 180px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -41,10 +41,10 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
 
-.sk-cube-grid .sk-cube {
+.sk-cube {
   width: 33%;
   height: 33%;
-  background-color: #c72c7e;
+  background: #fff url(../img/footwear.svg) no-repeat center center;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
   animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; }
