--- a/assets/scss/modules/loader.scss
+++ b/assets/scss/modules/loader.scss
@@ -9,7 +9,7 @@
     height: 100%;
     overflow: visible;
     background: #fff;
-    color: $color-3;
+    color: $gris-oscuro;
 }
 
 .sk-cube-grid {
