--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,4 +4,5 @@
 @import 'partials/_variables'; // colores, tipos de letra y personalizados
 @import 'modules/loader';
 @import 'layouts/global';
-//@import 'layouts/nav';
+@import 'layouts/nav';
+@import 'layouts/footer';
