--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,57 @@ a {
         .navbar .nav-menu-primary-container .navbar-nav a:hover {
           color: #e22980; }
 
+@media only screen and (min-width: 768px) {
+  #logo-principal h1 {
+    margin-top: 0; } }
+
+.barra-iconos-top {
+  padding: 10px 0 0 0;
+  display: block; }
+  .barra-iconos-top ul li a {
+    font-family: "Oswald-regular", sans-serif;
+    color: #666666;
+    padding: 0 12px 0 40px;
+    line-height: 32px;
+    background: transparent;
+    font-size: 14px;
+    text-transform: capitalize; }
+    .barra-iconos-top ul li a:hover {
+      color: #e22980;
+      background: transparent; }
+  .barra-iconos-top ul .icon-session a:before, .barra-iconos-top ul .icon-cart a:before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 32px;
+    height: 32px;
+    padding: 2px; }
+  .barra-iconos-top ul .cart-cuenta {
+    padding: 0; }
+    .barra-iconos-top ul .cart-cuenta .woocommerce-Price-currencySymbol {
+      margin: 0 5px 0 0; }
+    .barra-iconos-top ul .cart-cuenta .numero-cuenta {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      border: 1px solid #2f3238;
+      border-radius: 50%;
+      text-align: center; }
+  .barra-iconos-top ul .icon-session a:before {
+    background: url("../img/usuario-icono.png") center no-repeat;
+    background-size: contain; }
+  .barra-iconos-top ul .icon-session a:hover:before {
+    background: url("../img/usuario-icono-hover.png") center no-repeat;
+    background-size: contain; }
+  .barra-iconos-top ul .icon-cart a:before {
+    background: url("../img/carrito-icono.png") center no-repeat;
+    background-size: contain; }
+  .barra-iconos-top ul .icon-cart a:hover:before {
+    background: url("../img/carrito-icono-hover.png") center no-repeat;
+    background-size: contain; }
+
 /*
 HOVERNAV
 ========
