--- a/assets/scss/layouts/nav.scss
+++ b/assets/scss/layouts/nav.scss
@@ -33,6 +33,86 @@
     }
 }
 
+#logo-principal {
+    h1{
+        @include MQ(MXL){
+            margin-top: 0;
+        }
+    }
+}
+
+.barra-iconos-top {
+    padding: 10px 0 0 0;
+    display: block;
+    ul{
+        li{
+            a{
+                font-family: $title-regular;
+                color: $gris-claro;
+                padding: 0 12px 0 40px;
+                line-height: 32px;
+                background: transparent ;
+                font-size: 14px;
+                text-transform: capitalize;
+                &:hover{
+                    color: $rosa-cam;
+                    background: transparent;
+                }
+            }
+        }
+        .icon-session a, .icon-cart a{
+            &:before{
+                content: "";
+                display: block;
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 32px;
+                height: 32px;
+                padding: 2px;
+            }
+
+        }
+        .cart-cuenta{
+            padding: 0;
+            .woocommerce-Price-currencySymbol{
+                margin: 0 5px 0 0;
+            }
+            .numero-cuenta{
+                display: inline-block;
+                width: 30px;
+                height: 30px;
+                border: 1px solid $gris-oscuro;
+                border-radius: 50%;
+                text-align: center;
+            }
+        }
+        .icon-session{
+            a{
+                &:before{
+                    background: url('../img/usuario-icono.png') center no-repeat;
+                    background-size: contain;
+                }
+                &:hover:before{
+                    background: url('../img/usuario-icono-hover.png') center no-repeat;
+                    background-size: contain;
+                }
+            }
+        }
+        .icon-cart{
+            a{
+                &:before{
+                    background: url('../img/carrito-icono.png') center no-repeat;
+                    background-size: contain;
+                }
+                &:hover:before{
+                    background: url('../img/carrito-icono-hover.png') center no-repeat;
+                    background-size: contain;
+                }
+            }
+        }
+    }
+}
 /*
 HOVERNAV
 ========
