--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,3 +6,7 @@
 @import 'layouts/global';
 @import 'layouts/nav';
 @import 'layouts/footer';
+/*.woocommerce ul.products li.product, .woocommerce-page ul.products li.product {
+margin: 0 2.8% 2.992em 0;
+width: 17.55%;
+}*/
