Ajustes iniciales woocommerce

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,6 +372,10 @@ If you don't want this, delete this segment of the CSS and delete the correspond
 .navbar-default {
   background: none; }
 
+hr {
+  margin: 10px 0 10px 0;
+  padding: 0; }
+
 .site-footer {
   background: #2f3238; }
   .site-footer ul {
