--- a/assets/scss/layouts/nav.scss
+++ b/assets/scss/layouts/nav.scss
@@ -218,3 +218,7 @@ If you don't want this, delete this segment of the CSS and delete the correspond
 .navbar-default{
     background: none;
 }
+hr{
+    margin: 10px 0 10px 0;
+    padding: 0;
+}
